--- a/form-based-editing/index.html
+++ b/form-based-editing/index.html
@@ -25,7 +25,7 @@
     </script>
     <script src="https://jsdev.arcgis.com/4.11"></script>
     <script>
-      require(["app/main"]);
+      require(["app"]);
     </script>
   </head>
 
@@ -62,7 +62,6 @@
             Use current location for the entry or search to find the address
           </p>
           <div id="searchDiv"></div>
-          <!-- <div id="viewDiv" class="view-div"></div> -->
         </div>
         <div class="panel panel-white">
           <div class="trailer-half">Enter Information</div>
