--- a/editor/index.html
+++ b/editor/index.html
@@ -6,8 +6,21 @@
     <title>Using the JavaScript API Editor</title>
     <link rel="stylesheet" href="https://jsdev.arcgis.com/4.11/esri/css/main.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <script src="https://jsdev.arcgis.com/4.11/"></script>
-    <script src="js/main.js"></script>
+    <script>
+      var locationPath = location.pathname.replace(/\/[^\/]+$/, "");
+      window.dojoConfig = {
+        packages: [
+          {
+            name: "app",
+            location: locationPath + "/app"
+          }
+        ]
+      };
+    </script>
+    <script src="https://jsdev.arcgis.com/4.11"></script>
+    <script>
+      require(["app"]);
+    </script>
   </head>
 
   <body>
