--- a/form-based-editing/index.html
+++ b/form-based-editing/index.html
@@ -55,8 +55,8 @@
     </div>
     <i title="Location is missing" id="err" class="material-icons customError hidden">warning</i>
     <div class="grid-container">
-      <div class="column-24 leader-half" id="searchTextPanel">
-        <div class="panel panel-white leader-half">
+      <div class="column-24" id="searchTextPanel">
+        <div class="panel panel-white">
           <div class="trailer-half">Select Location</div>
           <p class="trailer-0 font-size--2">
             Use current location for the entry or search to find the address
