--- a/form-based-editing/index.html
+++ b/form-based-editing/index.html
@@ -59,7 +59,7 @@
         <div class="panel panel-white">
           <div class="trailer-half">Select Location</div>
           <p class="trailer-0 font-size--2">
-            Use current location for the entry or search to find the address
+            Use current location for the incident or search to find the address
           </p>
           <div id="searchDiv"></div>
         </div>
