--- a/form-based-editing/index.html
+++ b/form-based-editing/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.2.0/css/calcite-web.min.css"
     />
-    <link rel="stylesheet" href="https://jsdev.arcgis.com/4.11/esri/css/main.css" />
+    <link rel="stylesheet" href="https://js.arcgis.com/4.11/esri/css/main.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <script>
@@ -23,7 +23,7 @@
         ]
       };
     </script>
-    <script src="https://jsdev.arcgis.com/4.11"></script>
+    <script src="https://js.arcgis.com/4.11"></script>
     <script>
       require(["app"]);
     </script>
